<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.practica3acelerometro.Practica3Acelerometro" >

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" /> -->
    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/txtAccX"
	    android:text="@string/valX"
	/>
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/txtAccY"
	    android:text="@string/valY"
	/>
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/txtAccZ"
	    android:text="@string/valZ"
	/>

	<Button
	    android:id="@+id/btnIgual"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/BtnGravedad" />

	<Button
	    android:id="@+id/btnAccidente"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/BtnAccidente" />

	<EditText
	    android:id="@+id/textoAyuda"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:inputType="textMultiLine" 
	    android:enabled="false">
	    <requestFocus />
	</EditText>
	
</LinearLayout>
